@@ -7,7 +7,7 @@ we can compare. Each element is a list with 2 elements: [[1]] is
 the clustering method name, [[2]] is a function which takes a data
 matrix m and number of clusters k and then returns a vector of
 integer cluster assignments.}
-\usage{clusterings}
+\usage{"clusterings"}
 
 
 
